# hello-python-web

./: .gitignore  .mypyc-clean.sh  .mypyc.sh  .pyre_configuration  Cargo.toml  Dockerfile  README-i7-1360p.md  asdf.mojo  asdf.py  build.gradle  compile-and-run-go-ws-client.sh  compile-and-run-rust-ws-server.sh  hello.js  locustfile.py  nats-server.sh  post.lua  pyproject.toml  readme.md  settings.gradle  test-ab.sh  test-drill.sh  test-drill.yaml  test-long-data.sh  test-single.sh  test-with-failed.lua  test-with-failed.sh  test-with-failed2.sh  test.sh  text-request.txt  tmux-run-nats-cluster.go  wrk.repo
k6-test/: benchmark.js  run.sh
src/main/: 00-sizes.sh  dotshell.txz
src/main/confluent/: 00-dir.sh  01-start.sh  02-stop.sh  03-clean.sh  cluster.cfg  test-pub-sub.sh.out.5120.msgs  test-pub.sh  test-pub.sh.out.5120  test-pub.sh.out.5120.msgs  test-sub.sh  test-sub.sh.out.5120  test-sub.sh.out.5120.msgs  test-topic.sh
src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
src/main/ecs/: ecs.config  run-agent.sh
src/main/julia/: hello-julia.jl  import-http.jl
src/main/kafka/: .gitignore  01-start.sh  02-stop.sh  03-clean.sh  04-start-native.sh  05-stop-native.sh  Cargo.toml  cluster.cfg  process-kafka-outputs  process-outputs.rs  start.sh  stop.sh  test-pub-native.sh  test-pub-sub.sh  test-pub-sub.sh.out.1024.msgs  test-pub-sub.sh.out.1048576.msgs  test-pub-sub.sh.out.256.msgs  test-pub-sub.sh.out.5120.msgs  test-pub-sub.sh.out.65536.msgs  test-pub.sh  test-pub.sh.out.1024  test-pub.sh.out.1024.msgs  test-pub.sh.out.1048576  test-pub.sh.out.1048576.msgs  test-pub.sh.out.1048664  test-pub.sh.out.1048664.msgs  test-pub.sh.out.256  test-pub.sh.out.256.msgs  test-pub.sh.out.5120  test-pub.sh.out.5120.msgs  test-pub.sh.out.65536  test-pub.sh.out.65536.msgs  test-sub.sh  test-sub.sh.out.1024  test-sub.sh.out.1024.msg.per.sec  test-sub.sh.out.1024.msgs  test-sub.sh.out.1048576  test-sub.sh.out.1048576.msgs  test-sub.sh.out.1048664  test-sub.sh.out.1048664.msg.per.sec  (+10 more)
src/main/nats-jetstream/: .2.out  01_stream.sh  02_cons1.sh  03_cons2.sh  stream.sh
src/main/nats-pull-subscribe/: 01_stream.sh  02_cons1.sh  02_consumers.sh  03_cons2.sh  04.01_pub_node0.sh  04.01_pub_node1.sh  04.01_pub_node2.sh  04_pub.sh  04_pub_1.sh  05_consume.sh  05_consume_in_group.sh  06_populate_1000000.sh
src/main/nats-pull-subscribe-int/: 01_stream.sh  02_consumers.sh  04_count.sh  04_pub.sh  05_consume.sh
src/main/nats-pull-subscribe-wq/: 01_stream.sh  02_consumers.sh  04_pub.sh  05.00_consume.sh  05.01_check.sh  05.02_consume_in_group.sh
src/main/nats-stream/: 00-bench.sh  00-sizes.sh  00-stream.sh  01-reset.sh  02-pub.sh.out.1048664  03-sub.sh  03-sub.sh.out.1024  03-sub.sh.out.256  04-pub-sub-work.sh  04-pub-sub-work.sh.256.csv  04-pub-sub-work.sh.out.1048664  04-pub-sub-work.sh.out.256  04-pub-sub.sh  04-pub-sub.sh.1024.csv  04-pub-sub.sh.1048576.csv  04-pub-sub.sh.256.csv  04-pub-sub.sh.5120.csv  04-pub-sub.sh.65536.csv  04-pub-sub.sh.out.1024  04-pub-sub.sh.out.1048576  04-pub-sub.sh.out.1048664  04-pub-sub.sh.out.256  04-pub-sub.sh.out.5120  04-pub-sub.sh.out.65536  05-pub-sub-rep-3.sh  05-pub-sub-rep-3.sh.out.1024  05-pub-sub-rep-3.sh.out.1048664  05-pub-sub-rep-3.sh.out.256  05-pub-sub-rep-3.sh.out.5120  05-pub-sub-rep-3.sh.out.65536  06.01-pub-sub-python.sh  06.01-pub-sub-python.sh.out.1024  06.01-pub-sub-python.sh.out.1048664  06.01-pub-sub-python.sh.out.5120  06_02_pub_sub.py  07.01-pub-sub-python.sh  07.01-pub-sub-python.sh.out.128  07.01-pub-sub-python.sh.out.256  07.01_python_json.py  Cargo.toml  (+17 more)
src/main/python/: cd
src/main/redpanda/: 00-bootstrap.sh  00-install.sh  00-sizes.sh  01-start.sh  02-stop.sh  redpanda.yaml  test-pub.sh  (+7 more)
stubs/observable/: __init__.pyi  core.pyi
(+210 files in other folders)
