[package]
name = "fastjson"
version = "0.1.0"
authors = ["scorta <scorta@gmail.com>"]
edition = "2018"
description = "cargo build --release"


[[bin]]
name="rust-minihttp"
path = "src/main/rust/main.rs"

[[bin]]
name="rust-nats-server"
path = "src/main/rust/nats-server.rs"

[[bin]]
name="rust-ws"
path = "src/main/rust/ws.rs"

[[bin]]
name="rust-ws2"
path = "src/main/rust/ws2.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
may_minihttp = "0.1"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
ws2 = "0.2.5"
log2 = "0.1.11"
async-nats = "0.35.1"
bytes = "1.6.1"
futures = "0.3.30"

[profile.release]
opt-level = 3
#rustflags = ["-C", "target-cpu=native"]

[profile.dev]
opt-level = 0
debug = true




