[tool.poetry]
name = "hello-python-web"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastwsgi = "^0.0.9"
uvicorn = "^0.30.1"
fastapi = "^0.111.1"
uvloop = "^0.19.0"
gunicorn = "^22.0.0"
hypercorn = "^0.17.3"
nats-py = "^2.8.0"
nanoid = "^2.0.0"
nats-python = "^0.8.0"
requests = "^2.32.3"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
