[project]
name = "hello_python_web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = [
    "austin-dist>=3.7.0",
    "austin-tui>=1.2.3",
    "black>=24.10.0",
    "blacksheep>=2.0.8",
    "fastapi>=0.115.5",
    "granian>=1.6.4",
    "guppy3>=3.1.4.post1",
    "mypy>=1.13.0",
    "pylint>=3.3.1",
    "uvicorn>=0.32.1",
    "websockets>=14.1",
    "wsproto>=1.2.0",
]


